Fix section two boxes alignment

--- a/styles.css
+++ b/styles.css
@@ -172,7 +172,6 @@ body {
 
 .section-two {
     display: flex;
-    flex: 1;
     max-width: 866px;
     height: 400px;
 }
@@ -199,6 +198,7 @@ body {
 .section-two-one, .section-two-two, .section-two-three, .section-two-four {
     display: flex;
     flex-direction: column;
+    align-items: center;
     flex: 1;
 }
 
@@ -215,7 +215,6 @@ body {
 
 .section-two-one-box img, .section-two-two-box img, .section-two-three-box img, .section-two-four-box img {
     border-radius: 16px;
-
 }
 
 .section-two-one-text, .section-two-two-text, .section-two-three-text, .section-two-four-text {
@@ -223,5 +222,6 @@ body {
     text-align: center;
     text-shadow: 2px 2px black;
     margin-top: 5px;
-    margin-right: 50px;
+    margin-left: 25px;
+    margin-right: 25px;
 }
